--- a/back-end/package.json
+++ b/back-end/package.json
@@ -11,7 +11,8 @@
   "dependencies": {
     "cors": "^2.8.5",
     "express": "^4.17.1",
-    "mysql2": "^2.2.5"
+    "mysql2": "^2.2.5",
+    "supertest": "^6.1.6"
   },
   "devDependencies": {
     "jest": "^26.6.3"
